[gd_scene load_steps=24 format=3 uid="uid://cw0n0ga5n6bia"]

[ext_resource type="Texture2D" uid="uid://bb877b08y0nef" path="res://intro/bg.png" id="1_fpmxm"]
[ext_resource type="Script" uid="uid://c03nuh50n1tv5" path="res://intro/intro.gd" id="2_vjsr4"]
[ext_resource type="AudioStream" uid="uid://brjn4v40yh546" path="res://intro/bgmusic.ogg" id="3_rcqw2"]
[ext_resource type="Texture2D" uid="uid://d4e32b2tc8gvi" path="res://intro/text_bg.png" id="3_vjsr4"]
[ext_resource type="Texture2D" uid="uid://mvncw3xxk40c" path="res://intro/text_frame.png" id="4_pxqmo"]
[ext_resource type="Texture2D" uid="uid://d15ptwtkdr6pp" path="res://intro/logo.png" id="5_vyos2"]
[ext_resource type="Texture2D" uid="uid://ogxua1hf28pp" path="res://intro/startBtn_nor.png" id="6_a5lnx"]
[ext_resource type="Texture2D" uid="uid://b8nu4la0rx68j" path="res://intro/startBtn_prs.png" id="7_6ct58"]
[ext_resource type="Texture2D" uid="uid://dyyv1ooaw7pqd" path="res://intro/startBtn_hvr.png" id="8_6ct58"]
[ext_resource type="Texture2D" uid="uid://caio2mejpah8n" path="res://intro/sound_nor.png" id="9_ie2y0"]
[ext_resource type="Texture2D" uid="uid://bd5lmt84d31x6" path="res://ui/sound_prs.png" id="10_ao3yw"]
[ext_resource type="Texture2D" uid="uid://n0ughm8a4wnu" path="res://intro/lang_nor.png" id="11_ao3yw"]
[ext_resource type="Texture2D" uid="uid://yaebsieqrqya" path="res://intro/lang_prs.png" id="12_dk8sq"]
[ext_resource type="Texture2D" uid="uid://bjegjcomgt6fb" path="res://intro/cred_nor.png" id="13_rcqw2"]
[ext_resource type="Texture2D" uid="uid://dy2xgtirepl8o" path="res://intro/cred_prs.png" id="14_ttu4d"]
[ext_resource type="Texture2D" uid="uid://d14k3yk2rf7ma" path="res://ui/size_nor.png" id="15_m3u68"]
[ext_resource type="Texture2D" uid="uid://s5lphhy4mbx4" path="res://ui/size_prs.png" id="16_6o4ox"]
[ext_resource type="Shader" uid="uid://by1j111ya38xo" path="res://quizzes/common/UI.gdshader" id="18_dk8sq"]
[ext_resource type="Texture2D" uid="uid://d05oerko0vhw8" path="res://intro/window.png" id="19_rcqw2"]
[ext_resource type="Texture2D" uid="uid://clxaiidkxd3q1" path="res://intro/okbtn_nor.png" id="20_m3u68"]
[ext_resource type="Texture2D" uid="uid://d2qel561nfmow" path="res://intro/okbtn_prs.png" id="21_6o4ox"]
[ext_resource type="Texture2D" uid="uid://dgpn1rd46u37t" path="res://intro/okbtn_hvr.png" id="22_j7iwe"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rcqw2"]
shader = ExtResource("18_dk8sq")
shader_parameter/blur_size = 3.0
shader_parameter/radius = 4
shader_parameter/darkness = 0.5

[node name="Intro" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fpmxm")
expand_mode = 1
stretch_mode = 6
script = ExtResource("2_vjsr4")

[node name="Bg_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rcqw2")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="center_container" type="Control" parent="."]
anchors_preset = 0
offset_left = 100.0
offset_right = 634.0
offset_bottom = 662.0

[node name="logo" type="TextureRect" parent="center_container"]
layout_mode = 0
offset_left = 115.0
offset_top = 10.0
offset_right = 419.40002
offset_bottom = 364.4
texture = ExtResource("5_vyos2")
expand_mode = 1

[node name="text_window" type="TextureRect" parent="center_container"]
self_modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 0
offset_top = 369.0
offset_right = 533.3
offset_bottom = 549.0
mouse_filter = 2
texture = ExtResource("3_vjsr4")
expand_mode = 1

[node name="txt_wrapper" type="Control" parent="center_container/text_window"]
clip_contents = true
anchors_preset = 0
offset_left = 21.0
offset_top = 9.0
offset_right = 512.0
offset_bottom = 159.0
mouse_filter = 2

[node name="scroll_text" type="RichTextLabel" parent="center_container/text_window/txt_wrapper"]
clip_contents = false
layout_mode = 0
offset_right = 491.0
offset_bottom = 150.0
theme_override_constants/paragraph_separation = 20
theme_override_font_sizes/normal_font_size = 22
text = "INTRO_STORY"
autowrap_mode = 2
horizontal_alignment = 1
justification_flags = 35

[node name="text_frame" type="TextureRect" parent="center_container/text_window"]
layout_mode = 0
offset_right = 533.3
offset_bottom = 174.7
mouse_filter = 2
texture = ExtResource("4_pxqmo")
expand_mode = 1

[node name="Start_btn" type="TextureButton" parent="center_container"]
layout_mode = 0
offset_left = 129.0
offset_top = 554.0
offset_right = 405.0
offset_bottom = 652.0
texture_normal = ExtResource("6_a5lnx")
texture_pressed = ExtResource("7_6ct58")
texture_hover = ExtResource("8_6ct58")
ignore_texture_size = true
stretch_mode = 4

[node name="start_txt" type="Label" parent="center_container/Start_btn"]
layout_mode = 0
offset_right = 276.0
offset_bottom = 98.0
theme_override_font_sizes/font_size = 30
text = "INTRO_START"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options_panel" type="Control" parent="."]
anchors_preset = 0
offset_left = 800.0
offset_top = 500.0
offset_right = 1000.0
offset_bottom = 550.0

[node name="lang_toggle" type="TextureButton" parent="Options_panel"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("11_ao3yw")
texture_pressed = ExtResource("12_dk8sq")
ignore_texture_size = true
stretch_mode = 0

[node name="lang" type="MenuButton" parent="Options_panel/lang_toggle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
toggle_mode = false
action_mode = 1
icon_alignment = 1
expand_icon = true
item_count = 2
popup/item_0/text = "Ελληνικά"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1

[node name="info" type="TextureButton" parent="Options_panel"]
layout_mode = 0
offset_left = 50.0
offset_right = 100.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_rcqw2")
texture_pressed = ExtResource("14_ttu4d")
ignore_texture_size = true
stretch_mode = 5

[node name="Sound_toggle" type="TextureButton" parent="Options_panel"]
layout_mode = 0
offset_left = 100.0
offset_right = 150.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("9_ie2y0")
texture_pressed = ExtResource("10_ao3yw")
ignore_texture_size = true
stretch_mode = 0

[node name="window_size" type="TextureButton" parent="Options_panel"]
layout_mode = 0
offset_left = 150.0
offset_right = 200.0
offset_bottom = 50.0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource("15_m3u68")
texture_pressed = ExtResource("16_6o4ox")
ignore_texture_size = true
stretch_mode = 0

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="info" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_rcqw2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="window" type="TextureRect" parent="info"]
layout_mode = 0
offset_left = 100.0
offset_top = 93.0
offset_right = 865.0
offset_bottom = 593.0
texture = ExtResource("19_rcqw2")
expand_mode = 1
stretch_mode = 5

[node name="title" type="Label" parent="info/window"]
layout_mode = 0
offset_left = 240.0
offset_top = 14.0
offset_right = 527.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 24
text = "INFO_TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info_txt" type="RichTextLabel" parent="info/window"]
layout_mode = 0
offset_left = 48.0
offset_top = 76.0
offset_right = 718.0
offset_bottom = 371.0
theme_override_constants/paragraph_separation = 10
theme_override_font_sizes/normal_font_size = 20
text = "INFO_MAIN"
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="okbtn" type="TextureButton" parent="info/window"]
layout_mode = 0
offset_left = 308.0
offset_top = 359.0
offset_right = 458.0
offset_bottom = 429.0
texture_normal = ExtResource("20_m3u68")
texture_pressed = ExtResource("21_6o4ox")
texture_hover = ExtResource("22_j7iwe")
ignore_texture_size = true
stretch_mode = 4

[node name="oklbl" type="Label" parent="info/window/okbtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "OK"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="center_container/Start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Options_panel/info" to="." method="_on_info_pressed"]
[connection signal="toggled" from="Options_panel/Sound_toggle" to="." method="_on_sound_toggle_toggled"]
[connection signal="toggled" from="Options_panel/window_size" to="." method="_on_window_size_toggled"]
[connection signal="pressed" from="info/window/okbtn" to="." method="_on_okbtn_pressed"]
